1.06 
 [Michal Špaček]
 - Add DEPENDENCIES section to doc.
 - Add Test::NoWarnings to tests.
 - Add VERSION to doc.
 - Add utf8 encoding to doc.
 - Add tests.
 - Improve COPYRIGHT & LICENSE and AUTHOR section in doc.
 - Improve SEE ALSO section in doc.
 - Move runtrans to App::MetaTrans::Runtrans module.
 - Move metatrans to App::MetaTrans module.
 - Move MetaTrans::SeznamCz to standalone Perl module distribution.
 - Move MetaTrans::SlovnikCz to standalone Perl module distribution.
 - Move MetaTrans::SmsCz to standalone Perl module distribution.
 - Move MetaTrans::SlovnikZcuCz to standalone Perl module distribution.
 - Move MetaTrans::UltralinguaNet to standalone Perl module distribution.
 - Move MetaTrans::WordbookCz to standalone Perl module distribution.
 - Rewrite CVS revision numbers to static numbers.
 - Rewrite Changes file to CPAN::Changes::SPEC format.
 - Rewrite build system.
 - Rewrite tests to my standard tests.
 - Update Module::Install to 1.14 version.

1.05 2009-09-03
 [Michal Špaček]
 - fixed bug with procedure calling from Config::General.
 - updated MetaTrans::WordbookCz because of new interface
   of http://www.wordbook.cz/
 - updated MetaTrans::SmsCz because of new interface of http://www.sms.cz/
 - updated MetaTrans::SlovnikCz because of new interface
   of http://www.slovnik.cz/
 - updated MetaTrans::SeznamCz because of new interface
   of http://slovnik.seznam.cz/
 - updated MetaTrans::UltralinguaNet because of new interface
   of http://ultralingua.net/
 - removed some warnings in bin/metatrans
 - added MetaTrans::SlovnikZcuCz for http://slovnik.zcu.cz/

1.04 2005-03-07
 [Jan Pomikálek]
 - updated MetaTrans::WordbookCz because of new interface
   of http://www.wordbook.cz/
 - fixed another bug in MetaTrans::sort_translations function

1.03 2005-01-04
 [Jan Pomikálek]
 - updated MetaTrans::UltralinguaNet because of new interface
   of http://ultralingua.net/
 - fixed a bug in MetaTrans::sort_translations function
 - added cookies support