@@ -5,6 +5,7 @@
  - Add VERSION to doc.
  - Add utf8 encoding to doc.
  - Add tests.
+ - Fix constructor parameter processing in MetaTrans::Base.
  - Improve COPYRIGHT & LICENSE and AUTHOR section in doc.
  - Improve SEE ALSO section in doc.
  - Move runtrans to App::MetaTrans::Runtrans module.
